--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">EFSY.org</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
+							<li class="active"><a href="index.html">This is Engineers For STEM YOUTH</a></li>
+							<li><a href="generic.html">ENGINEERS FOR STEM YOUTH HOME</a></li>
+							<li><a href="elements.html">Engineers For STEM YOUTH Reference</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -226,4 +226,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
