--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
+										<span class="date">October 26, 2025 Changes that were documented on our Forensic TikTok and YouTube Social Media Platforms </span>
 										<h2><a href="#">Sed magna<br />
 										ipsum faucibus</a></h2>
 									</header>
@@ -228,3 +228,4 @@
 	</body>
 
 </html>
+
